feat: inclusão de variáveis de ambiente

--- a/.github/workflows/e2e-ci-cd-bugbank.yml
+++ b/.github/workflows/e2e-ci-cd-bugbank.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
 
+      - name: Create .env file from secrets
+        run: |
+          echo "TEST_USER_EMAIL=${{ secrets.TEST_USER_EMAIL }}" >> .env
+          echo "TEST_USER_NAME=${{ secrets.TEST_USER_NAME }}" >> .env
+          echo "TEST_USER_PASSWORD=${{ secrets.TEST_USER_PASSWORD }}" >> .env
+
       - name: Run Playwright tests
         run: npx playwright test
 
