--- a/.github/workflows/e2e-ci-cd-bugbank.yml
+++ b/.github/workflows/e2e-ci-cd-bugbank.yml
@@ -8,6 +8,7 @@ on:
 
 jobs:
   test:
+    timeout-minutes: 60
     runs-on: ubuntu-latest
 
     steps:
@@ -17,7 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: lts/*
       
       - name: Install dependencies
         run: npm ci
@@ -37,6 +38,8 @@ jobs:
       - name: Upload Playwright report (HTML)
         if: always()
         uses: actions/upload-artifact@v4
+        if: ${{ !cancelled() }}
         with:
           name: playwright-report
           path: playwright-report
+          retention-days: 30
